<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLavout_menu"
    tools:context="com.example.arek.lab3_czesc2.MenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add"
        android:id="@+id/btn_add"
        android:layout_below="@+id/btn_settings"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAdd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings"
        android:id="@+id/btn_settings"
        android:onClick="onClickSettings"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_watch"
        android:id="@+id/btn_watch"
        android:layout_below="@+id/btn_add"
        android:layout_centerHorizontal="true"
        android:onClick="onClickWatch" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_back"
        android:id="@+id/btn_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lmadapter"
        android:id="@+id/button3"
        android:layout_below="@+id/btn_watch"
        android:layout_centerHorizontal="true"
        android:onClick="onClickMlActivity" />
</RelativeLayout>
